# ProjectT

./: CMakeLists.txt
assets/: world.txt
include/SDL2/: SDL_revision.h
lib/x64/: SDL2_net.lib  SDL2_rtf.lib  SDL2_sound.lib  SDL2_ttf.lib  SDL2main.lib
src/: camera.c  camera.h  main.c  player.c  player.h  sprite_sheet.c  sprite_sheet.h  window.c  window.h  world.c  world.h
